src/main/java/graafvis/grammar/GraafvisParser.java
// Generated from C:/Users/poesd_000/IdeaProjects/GraphterEffects/src/main/java/graafvis/grammar\Graafvis.g4 by ANTLR 4.6
package graafvis.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GraafvisParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ARROW=1, COLON=2, EOL=3, PAR_OPEN=4, PAR_CLOSE=5, BRACE_OPEN=6, BRACE_CLOSE=7, 
		BRACKET_OPEN=8, BRACKET_CLOSE=9, VBAR=10, EQ=11, NQ=12, GT=13, LT=14, 
		GE=15, LE=16, COMMA=17, SEMICOLON=18, OR=19, AND=20, NOT=21, PLUS=22, 
		MINUS=23, MULT=24, DIV=25, POW=26, MOD=27, UNDERSCORE=28, TRUE=29, FALSE=30, 
		IMPORT_TOKEN=31, NODE_LABEL_TOKEN=32, EDGE_LABEL_TOKEN=33, RENAME_TOKEN=34, 
		STRING=35, NUMBER=36, ID=37, HID=38, WS=39, BLOCKCOMMENT=40, LINECOMMENT=41;
	public static final int
		RULE_program = 0, RULE_importVis = 1, RULE_nodeLabelGen = 2, RULE_edgeLabelGen = 3, 
		RULE_label = 4, RULE_clause = 5, RULE_antecedent = 6, RULE_propositionalFormula = 7, 
		RULE_consequence = 8, RULE_literal = 9, RULE_atom = 10, RULE_multiAtom = 11, 
		RULE_multiTerm = 12, RULE_termTuple = 13, RULE_predicate = 14, RULE_term = 15, 
		RULE_variable = 16, RULE_andOp = 17, RULE_orOp = 18;
	public static final String[] ruleNames = {
		"program", "importVis", "nodeLabelGen", "edgeLabelGen", "label", "clause", 
		"antecedent", "propositionalFormula", "consequence", "literal", "atom", 
		"multiAtom", "multiTerm", "termTuple", "predicate", "term", "variable", 
		"andOp", "orOp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'->'", "':'", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"'|'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "','", "';'", "'or'", 
		"'and'", "'not'", "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "'_'", "'true'", 
		"'false'", "'consult'", "'node labels'", "'edge labels'", "'as'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ARROW", "COLON", "EOL", "PAR_OPEN", "PAR_CLOSE", "BRACE_OPEN", 
		"BRACE_CLOSE", "BRACKET_OPEN", "BRACKET_CLOSE", "VBAR", "EQ", "NQ", "GT", 
		"LT", "GE", "LE", "COMMA", "SEMICOLON", "OR", "AND", "NOT", "PLUS", "MINUS", 
		"MULT", "DIV", "POW", "MOD", "UNDERSCORE", "TRUE", "FALSE", "IMPORT_TOKEN", 
		"NODE_LABEL_TOKEN", "EDGE_LABEL_TOKEN", "RENAME_TOKEN", "STRING", "NUMBER", 
		"ID", "HID", "WS", "BLOCKCOMMENT", "LINECOMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Graafvis.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraafvisParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GraafvisParser.EOF, 0); }
		public List<ImportVisContext> importVis() {
			return getRuleContexts(ImportVisContext.class);
		}
		public ImportVisContext importVis(int i) {
			return getRuleContext(ImportVisContext.class,i);
		}
		public NodeLabelGenContext nodeLabelGen() {
			return getRuleContext(NodeLabelGenContext.class,0);
		}
		public EdgeLabelGenContext edgeLabelGen() {
			return getRuleContext(EdgeLabelGenContext.class,0);
		}
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT_TOKEN) {
				{
				{
				setState(38);
				importVis();
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NODE_LABEL_TOKEN) {
				{
				setState(44);
				nodeLabelGen();
				}
			}

			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EDGE_LABEL_TOKEN) {
				{
				setState(47);
				edgeLabelGen();
				}
			}

			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PAR_OPEN) | (1L << NOT) | (1L << ID))) != 0)) {
				{
				{
				setState(50);
				clause();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportVisContext extends ParserRuleContext {
		public TerminalNode IMPORT_TOKEN() { return getToken(GraafvisParser.IMPORT_TOKEN, 0); }
		public TerminalNode STRING() { return getToken(GraafvisParser.STRING, 0); }
		public TerminalNode EOL() { return getToken(GraafvisParser.EOL, 0); }
		public ImportVisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importVis; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterImportVis(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitImportVis(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitImportVis(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportVisContext importVis() throws RecognitionException {
		ImportVisContext _localctx = new ImportVisContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importVis);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(IMPORT_TOKEN);
			setState(59);
			match(STRING);
			setState(60);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeLabelGenContext extends ParserRuleContext {
		public TerminalNode NODE_LABEL_TOKEN() { return getToken(GraafvisParser.NODE_LABEL_TOKEN, 0); }
		public TerminalNode COLON() { return getToken(GraafvisParser.COLON, 0); }
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public TerminalNode EOL() { return getToken(GraafvisParser.EOL, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GraafvisParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GraafvisParser.COMMA, i);
		}
		public NodeLabelGenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeLabelGen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterNodeLabelGen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitNodeLabelGen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitNodeLabelGen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeLabelGenContext nodeLabelGen() throws RecognitionException {
		NodeLabelGenContext _localctx = new NodeLabelGenContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nodeLabelGen);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(NODE_LABEL_TOKEN);
			setState(63);
			match(COLON);
			setState(64);
			label();
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(65);
				match(COMMA);
				setState(66);
				label();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdgeLabelGenContext extends ParserRuleContext {
		public TerminalNode EDGE_LABEL_TOKEN() { return getToken(GraafvisParser.EDGE_LABEL_TOKEN, 0); }
		public TerminalNode COLON() { return getToken(GraafvisParser.COLON, 0); }
		public List<LabelContext> label() {
			return getRuleContexts(LabelContext.class);
		}
		public LabelContext label(int i) {
			return getRuleContext(LabelContext.class,i);
		}
		public TerminalNode EOL() { return getToken(GraafvisParser.EOL, 0); }
		public List<TerminalNode> COMMA() { return getTokens(GraafvisParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GraafvisParser.COMMA, i);
		}
		public EdgeLabelGenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edgeLabelGen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterEdgeLabelGen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitEdgeLabelGen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitEdgeLabelGen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EdgeLabelGenContext edgeLabelGen() throws RecognitionException {
		EdgeLabelGenContext _localctx = new EdgeLabelGenContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_edgeLabelGen);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(EDGE_LABEL_TOKEN);
			setState(75);
			match(COLON);
			setState(76);
			label();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(77);
				match(COMMA);
				setState(78);
				label();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LabelContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(GraafvisParser.STRING, 0); }
		public TerminalNode RENAME_TOKEN() { return getToken(GraafvisParser.RENAME_TOKEN, 0); }
		public TerminalNode ID() { return getToken(GraafvisParser.ID, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterLabel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitLabel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_label);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(STRING);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RENAME_TOKEN) {
				{
				setState(87);
				match(RENAME_TOKEN);
				setState(88);
				match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseContext extends ParserRuleContext {
		public ConsequenceContext consequence() {
			return getRuleContext(ConsequenceContext.class,0);
		}
		public TerminalNode EOL() { return getToken(GraafvisParser.EOL, 0); }
		public AntecedentContext antecedent() {
			return getRuleContext(AntecedentContext.class,0);
		}
		public TerminalNode ARROW() { return getToken(GraafvisParser.ARROW, 0); }
		public ClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseContext clause() throws RecognitionException {
		ClauseContext _localctx = new ClauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(91);
				antecedent();
				setState(92);
				match(ARROW);
				}
				break;
			}
			setState(96);
			consequence();
			setState(97);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AntecedentContext extends ParserRuleContext {
		public PropositionalFormulaContext propositionalFormula() {
			return getRuleContext(PropositionalFormulaContext.class,0);
		}
		public AntecedentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_antecedent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterAntecedent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitAntecedent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitAntecedent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AntecedentContext antecedent() throws RecognitionException {
		AntecedentContext _localctx = new AntecedentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_antecedent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			propositionalFormula(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropositionalFormulaContext extends ParserRuleContext {
		public PropositionalFormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propositionalFormula; }
	 
		public PropositionalFormulaContext() { }
		public void copyFrom(PropositionalFormulaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PfNotContext extends PropositionalFormulaContext {
		public TerminalNode NOT() { return getToken(GraafvisParser.NOT, 0); }
		public PropositionalFormulaContext propositionalFormula() {
			return getRuleContext(PropositionalFormulaContext.class,0);
		}
		public PfNotContext(PropositionalFormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfNot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PfLitContext extends PropositionalFormulaContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public PfLitContext(PropositionalFormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfLit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfLit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfLit(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PfAndContext extends PropositionalFormulaContext {
		public List<PropositionalFormulaContext> propositionalFormula() {
			return getRuleContexts(PropositionalFormulaContext.class);
		}
		public PropositionalFormulaContext propositionalFormula(int i) {
			return getRuleContext(PropositionalFormulaContext.class,i);
		}
		public AndOpContext andOp() {
			return getRuleContext(AndOpContext.class,0);
		}
		public PfAndContext(PropositionalFormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PfOrContext extends PropositionalFormulaContext {
		public List<PropositionalFormulaContext> propositionalFormula() {
			return getRuleContexts(PropositionalFormulaContext.class);
		}
		public PropositionalFormulaContext propositionalFormula(int i) {
			return getRuleContext(PropositionalFormulaContext.class,i);
		}
		public OrOpContext orOp() {
			return getRuleContext(OrOpContext.class,0);
		}
		public PfOrContext(PropositionalFormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfOr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PfNestContext extends PropositionalFormulaContext {
		public TerminalNode PAR_OPEN() { return getToken(GraafvisParser.PAR_OPEN, 0); }
		public PropositionalFormulaContext propositionalFormula() {
			return getRuleContext(PropositionalFormulaContext.class,0);
		}
		public TerminalNode PAR_CLOSE() { return getToken(GraafvisParser.PAR_CLOSE, 0); }
		public PfNestContext(PropositionalFormulaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterPfNest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitPfNest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitPfNest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropositionalFormulaContext propositionalFormula() throws RecognitionException {
		return propositionalFormula(0);
	}

	private PropositionalFormulaContext propositionalFormula(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PropositionalFormulaContext _localctx = new PropositionalFormulaContext(_ctx, _parentState);
		PropositionalFormulaContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_propositionalFormula, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
				{
				_localctx = new PfNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(102);
				match(NOT);
				setState(103);
				propositionalFormula(5);
				}
				break;
			case PAR_OPEN:
				{
				_localctx = new PfNestContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(104);
				match(PAR_OPEN);
				setState(105);
				propositionalFormula(0);
				setState(106);
				match(PAR_CLOSE);
				}
				break;
			case ID:
				{
				_localctx = new PfLitContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(108);
				literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(121);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(119);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new PfAndContext(new PropositionalFormulaContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_propositionalFormula);
						setState(111);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(112);
						andOp();
						setState(113);
						propositionalFormula(5);
						}
						break;
					case 2:
						{
						_localctx = new PfOrContext(new PropositionalFormulaContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_propositionalFormula);
						setState(115);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(116);
						orOp();
						setState(117);
						propositionalFormula(4);
						}
						break;
					}
					} 
				}
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ConsequenceContext extends ParserRuleContext {
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public List<AndOpContext> andOp() {
			return getRuleContexts(AndOpContext.class);
		}
		public AndOpContext andOp(int i) {
			return getRuleContext(AndOpContext.class,i);
		}
		public ConsequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_consequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).enterConsequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraafvisListener ) ((GraafvisListener)listener).exitConsequence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraafvisVisitor ) return ((GraafvisVisitor<? extends T>)visitor).visitConsequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConsequenceContext consequence() throws RecognitionException {
		ConsequenceContext _localctx = new ConsequenceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_consequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			literal();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA || _la==AND) {
				{
				{
				setState(125);
				andOp();
				setState(126);
				literal();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
